--- a/templates/formAdd.html
+++ b/templates/formAdd.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h1>Adiciona usuário</h1>
-  <form action="/users/save" method="post">
+  <form action="/users/save" method="POST">
     <div>
       <input type="text" name="name" placeholder="Digite um nome" />
     </div>
