--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=
-  , initial-scale=1.0">
-  <title>Home</title>
-</head>
-<body>
-  <h1>Home express</h1>
-  <p>usando nodemon</p>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="viewport"
+      content="width=
+  , initial-scale=1.0"
+    />
+    <link rel="stylesheet" href="/css/style.css">
+    <title>Home</title>
+  </head>
+  <body>
+    <h1>Home express</h1>
+    <p>usando nodemon</p>
+  </body>
 </html>
