--- a/templates/home.html
+++ b/templates/home.html
@@ -10,5 +10,11 @@
 </head>
 <body>
   <h1>Node mini project</h1>
+  <div>
+    <a href="cute/cats">Cats</a>
+  </div>
+  <div>
+    <a href="cute/dogs">Dogs</a>
+  </div>
 </body>
 </html>
