--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,2 +1,4 @@
   <h1>Template engine</h1>
   <p>Handlebars</p>
+  <br>
+  <p>O nome do usuário é: {{user.name}} e está fazendo o curso de {{user.course}}</p>
