--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -2,3 +2,4 @@
   <p>Handlebars</p>
   <br>
   <p>O nome do usuário é: {{user.name}} e está fazendo o curso de {{user.course}}</p>
+  <h3>{{uso}}</h3>
