uso do if com handlebars

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,5 +1,9 @@
-  <h1>Template engine</h1>
-  <p>Handlebars</p>
-  <br>
-  <p>O nome do usuário é: {{user.name}} e está fazendo o curso de {{user.course}}</p>
-  <h3>{{uso}}</h3>
+<h1>Template engine</h1>
+<p>Handlebars</p>
+<br>
+<p>O nome do usuário é: {{user.name}} e está fazendo o curso de {{user.course}}</p>
+<h3>{{uso}}</h3>
+{{#if auth}}
+
+
+{{/if}}
