estrutura simple com true

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -4,6 +4,7 @@
 <p>O nome do usuário é: {{user.name}} e está fazendo o curso de {{user.course}}</p>
 <h3>{{uso}}</h3>
 {{#if auth}}
-
-
+  <p>Usuário logado</p>
+  <p>Acesse a página exclusiva</p>
+  <a href="/dashboards">Clique aqui</a>
 {{/if}}
