--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -5,8 +5,8 @@
     <input type="text" name="title" placeholder="Título do livro">
   </div>
   <div class="form-control">
-    <label for="pageqty">Número de páginas:</label>
-    <input type="number" name="pageqty" placeholder="Quantas páginas o livro tem?">
+    <label for="page">Número de páginas:</label>
+    <input type="number" name="page" placeholder="Quantas páginas o livro tem?">
   </div>
   <input type="submit" value="Cadastrar">
 </form>
