--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,9 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Node-Mysql</title>
+  <link rel="stylesheet" href="/css/styles.css">
+  <title>Handlebars</title>
 </head>
 <body>
-  {{{ body }}}
+  {{{body}}}
 </body>
 </html>
